--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                     <button type="button" style="margin-left:50px" id="btn_query2" class="btn btn-primary" onclick="logout();">退出登录</button>
                 </div>
                 <div class="col-sm-4" style="text-align:left;" id="register">
-                    <button type="button" style="margin-left:50px" id="btn_register" class="btn btn-primary">注册帐号</button>
+                    <button type="button" style="margin-left:50px" id="btn_register" class="btn btn-primary">注册帐号(仅供主帐号使用)</button>
+                </div>
+                <div class="col-sm-4" style="text-align:left;" id="register">
+                        <button type="button" style="margin-left:50px" id="btn_update_password" class="btn btn-primary">修改子账户密码(仅供主账户使用)</button>
                 </div>
             </div>
         </div>
@@ -381,6 +384,38 @@
             </div>
         </div>
     </form>
+
+    <form class="update_password_form">
+            <div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <h4 class="modal-title" id="myModalLabel">更新账户密码</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label for="txt_price">用户名</label>
+                                <input type="text" name="txt_update_username" class="form-control" id="txt_update_username" placeholder="用户名">
+                            </div>
+    
+                            <div class="form-group">
+                                <label for="txt_price">密码</label>
+                                <input type="text" name="txt_update_password" class="form-control" id="txt_update_password" placeholder="密码">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Close</关闭>
+                                <button type="button" id="btn_update_password_submit" class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>提交</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
 
 </body>
 
