--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <input type="text" name="txt_qqnumber" class="form-control" id="txt_add_qqnumber" placeholder="客服QQ">
                         </div>
                         <div class="form-group">
-                            <label for="txt_price">备注</label>
+                            <label for="txt_price">app名称</label>
                             <input type="text" name="txt_comment" class="form-control" id="txt_add_comment" placeholder="Comment">
                         </div>
                         <div class="form-group">
@@ -275,7 +275,7 @@
                             <input type="text" name="edit_qqnumber" class="form-control" id="txt_edit_qqnumber" placeholder="客服QQ">
                         </div>
                         <div class="form-group">
-                            <label for="txt_price">备注</label>
+                            <label for="txt_price">app名称</label>
                             <input type="text" name="txt_comment" class="form-control" id="txt_edit_comment" placeholder="Comment">
                         </div>
                         <div class="form-group">
