--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         </div>
                         <div class="form-group">
                             <label for="txt_price">app名称</label>
-                            <input type="text" name="txt_comment" class="form-control" id="txt_edit_comment" placeholder="Comment">
+                            <input type="text" name="txt_comment" class="form-control" id="txt_edit_comment" placeholder="app名称">
                         </div>
                         <div class="form-group">
                             <label for="txt_price">预留1</label>
