--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="txt_price">app名称</label>
-                            <input type="text" name="txt_comment" class="form-control" id="txt_add_comment" placeholder="app名称">
+                            <input type="text" name="txt_app_name" class="form-control" id="txt_add_app_name" placeholder="app名称">
                         </div>
 
                         <div class="form-group">
@@ -177,6 +177,21 @@
                             </label>
                             <label class="radio-inline">
                                 <input type="radio" name="add_show" id="optradio_add_show_false" value="No"> No
+                            </label>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="txt_price">强更链接</label>
+                            <input type="text" name="txt_update_url" class="form-control" id="txt_add_update_url" placeholder="URL">
+                        </div>
+                        <div class="form-group">
+                            <label for="txt_quantity">是否强更</label>
+                            <br>
+                            <label class="radio-inline">
+                                <input type="radio" name="add_update" id="optradio_add_update_yes" value="Yes"> Yes
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="add_update" id="optradio_add_update_false" value="No"> No
                             </label>
                         </div>
 
@@ -201,6 +216,11 @@
                         <div class="form-group">
                             <label for="txt_qqnumber">客服QQ</label>
                             <input type="text" name="txt_qqnumber" class="form-control" id="txt_add_qqnumber" placeholder="客服QQ">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="txt_comment">备注</label>
+                            <input type="text" name="txt_comment" class="form-control" id="txt_add_comment" placeholder="备注">
                         </div>
 
                         <div class="form-group">
@@ -239,7 +259,7 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="txt_price">app名称</label>
-                            <input type="text" name="txt_comment" class="form-control" id="txt_edit_comment" placeholder="app名称">
+                            <input type="text" name="txt_app_name" class="form-control" id="txt_edit_app_name" placeholder="app名称">
                         </div>
                         <div class="form-group">
                             <label for="txt_price">应用ID</label>
@@ -257,6 +277,21 @@
                             </label>
                             <label class="radio-inline">
                                 <input type="radio" name="edit_show" id="optradio_edit_show_false" value="No"> No
+                            </label>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="txt_price">强更链接</label>
+                            <input type="text" name="txt_edit_update_url" class="form-control" id="txt_edit_update_url" placeholder="URL">
+                        </div>
+                        <div class="form-group">
+                            <label for="txt_quantity">是否强更</label>
+                            <br>
+                            <label class="radio-inline">
+                                <input type="radio" name="edit_update" id="optradio_edit_update_yes" value="Yes"> Yes
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="edit_update" id="optradio_edit_update_false" value="No"> No
                             </label>
                         </div>
 
@@ -281,6 +316,11 @@
                         <div class="form-group">
                             <label for="txt_qqnumber">客服QQ</label>
                             <input type="text" name="edit_qqnumber" class="form-control" id="txt_edit_qqnumber" placeholder="客服QQ">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="txt_edit_comment">备注</label>
+                            <input type="text" name="txt_edit_comment" class="form-control" id="txt_edit_comment" placeholder="备注">
                         </div>
 
                         <div class="form-group">
