--- a/index.html
+++ b/index.html
@@ -300,26 +300,22 @@
                                 <input type="radio" name="multi_update_show" id="optradio_multi_update_show_false" value="No"> No
                             </label>
                         </div>
+
                         <div class="form-group">
-                            <label for="txt_price">轮播图</label>
-                            <input type="text" name="milti_update_imagelist" class="form-control" id="txt_milti_update_imagelist" placeholder="以;隔开">
+                            <label for="txt_price">强更链接</label>
+                            <input type="text" name="txt_multi_update_update_url" class="form-control" id="txt_multi_update_update_url" placeholder="URL">
                         </div>
                         <div class="form-group">
-                            <label for="txt_price">跑马灯</label>
-                            <input type="text" name="multi_update_marqueeContent" class="form-control" id="txt_multi_update_marqueeContent" placeholder="欢迎使用本软件">
+                            <label for="txt_quantity">是否强更</label>
+                            <br>
+                            <label class="radio-inline">
+                                <input type="radio" name="edit_multi_update_update" id="optradio_edit_multi_update_update_yes" value="Yes"> Yes
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="edit_multi_update_update" id="optradio_edit_multi_update_update_false" value="No"> No
+                            </label>
                         </div>
-                        <div class="form-group">
-                            <label for="txt_price">预留1</label>
-                            <input type="text" name="txt_multi_update_reserve1" class="form-control" id="txt_multi_update_reserve1" placeholder="预留1">
-                        </div>
-                        <div class="form-group">
-                            <label for="txt_price">预留2</label>
-                            <input type="text" name="txt_multi_update_reserve2" class="form-control" id="txt_multi_update_reserve2" placeholder="预留2">
-                        </div>
-                        <div class="form-group">
-                            <label for="txt_price">预留3</label>
-                            <input type="text" name="txt_multi_update_reserve3" class="form-control" id="txt_multi_update_reserve3" placeholder="预留3">
-                        </div>
+                        
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">
