--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <input type="radio" name="add_show" id="optradio_add_show_yes" value="Yes"> Yes
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="add_show" id="optradio_add_show_false" value="No"> No
+                                <input type="radio" name="add_show" id="optradio_add_show_false" value="No" checked="checked"> No
                             </label>
                         </div>
 
@@ -119,7 +119,7 @@
                                 <input type="radio" name="add_update" id="optradio_add_update_yes" value="Yes"> Yes
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="add_update" id="optradio_add_update_false" value="No"> No
+                                <input type="radio" name="add_update" id="optradio_add_update_false" value="No" checked="checked"> No
                             </label>
                         </div>
 
@@ -130,7 +130,7 @@
                                 <input type="radio" name="add_type" id="optradio_add_ios" value="iOS"> iOS
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="add_type" id="optradio_add_android" value="android"> android
+                                <input type="radio" name="add_type" id="optradio_add_android" value="android" checked="checked"> android
                             </label>
                         </div>
                         
