--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="txt_search">
                         </div>
+                        <div class="form-group">
+                            <select class="form-control"> 
+                              <option>1</option> 
+                              <option>2</option> 
+                              <option>3</option> 
+                              <option>4</option> 
+                              <option>5</option> 
+                              </select>
+                        </div>
                         <div class="col-sm-4" style="text-align:left;">
                             <button type="button" style="margin-left:50px" id="btn_query" class="btn btn-primary" onclick="search();">查询</button>
                         </div>
