--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="txt_search">
                         </div>
-                        <select class="selectpicker">
-                            <option>Mustard</option>
-                            <option>Ketchup</option>
-                            <option>Relish</option>
-                          </select>                          
-                        <div class="col-sm-4" style="text-align:left;">
+                        <div class="col-sm-4"
+                            <select class="selectpicker">
+                                <option>Mustard</option>
+                                <option>Ketchup</option>
+                                <option>Relish</option>
+                            </select>  
+                        </div>                        
+                        <div class="col-sm-5" style="text-align:left;">
                             <button type="button" style="margin-left:50px" id="btn_query" class="btn btn-primary" onclick="search();">查询</button>
                         </div>
                     </div>
