--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="txt_search">
                         </div>
-                        <div class="col-sm-4"
+                        <div class="form-group">
                             <select class="selectpicker">
                                 <option>Mustard</option>
                                 <option>Ketchup</option>
