--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="txt_search">
                         </div>
-                        <select class="selectpicker">
+                        <select class="selectpicker control-label col-sm-1">
                             <option>Mustard</option>
                             <option>Ketchup</option>
                             <option>Relish</option>
