--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                             <input type="text" class="form-control" id="txt_search">
                         </div>
                         <select class="selectpicker control-label col-sm-1">
-                            <option>模糊搜索</option>
-                            <option>精确搜索</option>
+                            <option>模糊搜索全局</option>
+                            <option>精确搜索应用ID</option>
+                            <option>精确搜索创建者</option>
                         </select>                       
                         <div class="col-sm-5" style="text-align:left;">
                             <button type="button" style="margin-left:50px" id="btn_query" class="btn btn-primary" onclick="search();">查询</button>
