--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="txt_search">
                         </div>
-                        <select class="selectpicker control-label col-sm-1">
+                        <select class="selectpicker control-label col-sm-1" onchange="selectOnchang(this)">
                             <option>模糊搜索全局</option>
                             <option>精确搜索应用ID</option>
                             <option>精确搜索创建者</option>
